--- a/vercel.json
+++ b/vercel.json
@@ -5,5 +5,8 @@
     ],
     "routes": [
       { "src": "/(.*)", "dest": "app.py" }
+    ],
+    "functionFailoverRegions" : [
+      "fra1"
     ]
   }  
