--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -1,4 +1,4 @@
-name: Docker Image CI
+name: Docker Compose CI
 
 on:
   push:
@@ -7,14 +7,18 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
 
     runs-on: ubuntu-latest
 
     steps:
     - uses: actions/checkout@v4
-    - name: Build and Start Services with Docker Compose
-      run: |
-        docker-compose -f docker-compose.yml build
-        docker-compose -f docker-compose.yml up -d
+
+    - name: Set up Docker Compose
+      run: docker-compose --version
+
+    - name: Build and Start Services
+      run: docker-compose up --build -d
+
+    - name: Stop and Clean Up
+      run: docker-compose down
