--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -23,7 +23,11 @@ jobs:
       run: |
         docker-compose up --build -d
 
-    - name: Run tests (if applicable)
+    - name: Display flask-app logs
+      run: |
+        docker-compose logs flask-app
+
+    - name: Run tests
       run: |
         docker-compose exec flask-app
 
