--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -2,36 +2,48 @@ name: Docker Image CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
+
   pull_request:
-    branches: [ "main" ]
+    branches:
+      - main
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    
-    - name: Set up Docker Compose
-      run: |
-        docker-compose --version || sudo apt-get update && sudo apt-get install -y docker-compose
+      # Étape 1 : Vérifier le code source
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-    - name: Display flask-app files
-      run: |
-        echo "Listing project files..."
-        ls -R
+      # Étape 2 : Configurer Python
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: 3.13.0
 
-    - name: Build and display flask-app logs
-      run: |
-        docker-compose up --build --force-recreate --remove-orphans | tee logs.txt
-        docker-compose logs flask-app -f | tee -a logs.txt
+      # Étape 3 : Installer les dépendances
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Display logs.txt content
-      run: |
-        echo "Displaying logs.txt content..."
-        cat logs.txt
+      # Étape 4 : Exécuter les tests unitaires
+      - name: Run unit tests
+        run: |
+          cd experiments
+          for test_file in mode_duel_test.py mode_battleIA_test.py solveur_test.py; do
+            echo "Running tests in $test_file..."
+            python -m unittest "$test_file"
+          done
 
-    - name: Tear down services
-      run: |
-        docker-compose down
+        env:
+          PYTHONIOENCODING: "utf-8"
+
+      # Étape 5 : Lancer les tests Flask
+      - name: Test Flask app
+        run: |
+          cd ..
+          python start_test_app.py
