--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -28,12 +28,12 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r app/requirements.txt
 
       # Étape 4 : Exécuter les tests unitaires et capturer la sortie
       - name: Run unit tests
         run: |
-          python test_tusmo_app.py > test_output.log 2>&1
+          python tests/test_tusmo_app.py > test_output.log 2>&1
           tail -n 1 test_output.log > last_line.log
         env:
           PYTHONIOENCODING: "utf-8"
