--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -33,7 +33,8 @@ jobs:
       # Étape 4 : Exécuter les tests unitaires et capturer la sortie
       - name: Run unit tests
         run: |
-          python tests/test_tusmo_app.py > test_output.log 2>&1
+          cd tests
+          python test_tusmo_app.py > test_output.log 2>&1
           tail -n 1 test_output.log > last_line.log
         env:
           PYTHONIOENCODING: "utf-8"
