--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -42,6 +42,7 @@ jobs:
       # Étape 5 : Vérifier si les tests ont réussi
       - name: Check test result
         run: |
+          cd tests
           cat test_output.log
           if grep -q "✅ All tests passed" last_line.log; then
             echo "Tests passed successfully!"
