--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -5,10 +5,27 @@ on:
     branches:
       - main
       - dev
+      
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          # latest python minor
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+          pip install pylint
+      - name: Lint
+        run: |
+          pylint src --fail-under=6
+      - name: Test Python code
+        run: python app.py
       -
         name: Login to Docker Hub
         uses: docker/login-action@v3
