--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -16,6 +16,10 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
+      - name: Create .env file
+        run : |
+          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> /app/.env
+
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sumot:latest .
 
