--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -18,8 +18,7 @@ jobs:
 
       - name: Create .env file
         run : |
-          mkdir -p /app
-          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> /app/.env
+          echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
 
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sumot:latest .
