--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -18,7 +18,9 @@ jobs:
 
       - name: Create .env file
         run : |
+          cd app
           echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
+          cd ..
 
       - name: Build Docker Image
         run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sumot:latest .
