--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -21,3 +21,16 @@ jobs:
 
       - name: Push Docker Image
         run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/sumot:latest
+
+      # name: Deploy to Kubernetes
+      - name: Update Deployment Repo
+        run: |
+          git clone https://github.com/marcderoo/SUMOT-deployment.git
+          cd SUMOT-deployment
+          sed -i "s|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:.*|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:latest|g" deployment/deployment.yaml
+          git config --global user.name 'GitHub Actions'
+          git config --global user.email 'actions@github.com'
+          git add deployment/deployment.yaml
+          git commit -m "Update image to latest"
+          git push https://x-access-token:${{ secrets.DEPLOYMENT_REPO_TOKEN }}@github.com/marcderoo/SUMOT-deployment.git main
+
