--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -33,7 +33,7 @@ jobs:
         run: |
           git clone https://github.com/marcderoo/SUMOT-deployment.git
           cd SUMOT-deployment
-          sed -i "s|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:.*|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:latest|g" deployment/deployment.yaml
+          sed -i "s|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:.*|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:latest|g" deployment/deployment.yml
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add deployment/deployment.yml
