--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -36,7 +36,7 @@ jobs:
           sed -i "s|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:.*|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:latest|g" deployment/deployment.yml
 
           sudo apt-get install -y yq  # Installer yq si absent
-          yq -i '.metadata.annotations.timestamp = strftime("%s")' deployment/deployment.yml
+          yq -y -i '.metadata.annotations.timestamp = strftime("%s")' deployment/deployment.yml
 
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
