--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -3,7 +3,9 @@ name: Build and Push Docker Image
 on:
   push:
     branches:
-      - main  # Déclenche le workflow lors d'un push sur main
+      - main  # Continue de fonctionner sur `main`
+    tags:
+      - 'v*'  # Déclenche le workflow lors d'un tag versionné (ex: v0.0.1, v1.0.0)
 
 jobs:
   build-and-push:
@@ -16,33 +18,35 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
+      - name: Extract version from tag
+        if: startsWith(github.ref, 'refs/tags/')
+        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+
       - name: Create .env file
-        run : |
+        run: |
           cd app
           echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
           cd ..
 
       - name: Build Docker Image
-        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sumot:latest .
+        run: docker build -t ${{ secrets.DOCKERHUB_USERNAME }}/sumot:${{ env.VERSION }} .
 
       - name: Push Docker Image
-        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/sumot:latest
+        run: docker push ${{ secrets.DOCKERHUB_USERNAME }}/sumot:${{ env.VERSION }}
 
       - name: Update Deployment Repo
         run: |
           git clone https://github.com/marcderoo/SUMOT-deployment.git
           cd SUMOT-deployment
 
-          sed -i "s|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:.*|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:latest|g" deployment/deployment.yml
+          sed -i "s|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:.*|image: ${{ secrets.DOCKERHUB_USERNAME }}/sumot:${{ env.VERSION }}|g" deployment/deployment.yml
 
-          sudo apt-get install -y yq  # Installer yq si absent
+          sudo apt-get install -y yq
           TIMESTAMP=$(date +%s)
           yq -y -i ".metadata.annotations.timestamp = \"$TIMESTAMP\"" deployment/deployment.yml
 
           git config --global user.name 'GitHub Actions'
           git config --global user.email 'actions@github.com'
           git add deployment/deployment.yml
-          git commit -m "Update image to latest + timestamp"
+          git commit -m "Update image to version ${{ env.VERSION }}"
           git push https://x-access-token:${{ secrets.DEPLOYMENT_REPO_TOKEN }}@github.com/marcderoo/SUMOT-deployment.git main
-
-
