--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -18,9 +18,16 @@ jobs:
       - name: Login to Docker Hub
         run: echo "${{ secrets.DOCKERHUB_TOKEN }}" | docker login -u "${{ secrets.DOCKERHUB_USERNAME }}" --password-stdin
 
-      - name: Extract version from tag
-        if: startsWith(github.ref, 'refs/tags/')
-        run: echo "VERSION=${GITHUB_REF#refs/tags/}" >> $GITHUB_ENV
+        
+      - name: Set version based on commit or tag
+        run: |
+          if [[ "${GITHUB_REF}" == refs/tags/* ]]; then
+            VERSION="${GITHUB_REF#refs/tags/}"  # Extrait la version du tag
+          else
+            VERSION="latest"  # Définir une valeur par défaut pour les commits sur main
+          fi
+          echo "VERSION=${VERSION}" >> $GITHUB_ENV
+      
 
       - name: Create .env file
         run: |
