--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -33,6 +33,10 @@ jobs:
         run: |
           cd app
           echo "MONGODB_URI=${{ secrets.MONGODB_URI }}" >> .env
+          echo "AWS_ACCESS_KEY_ID=${{ secrets.AWS_ACCESS_KEY_ID }}" >> .env
+          echo "AWS_SECRET_ACCESS_KEY=${{ secrets.AWS_SECRET_ACCESS_KEY }}" >> .env
+          echo "AWS_SESSION_TOKEN=${{ secrets.AWS_SESSION_TOKEN }}" >> .env
+          echo "X-MAGICAPI-KEY=${{ secrets.X-MAGICAPI-KEY }}" >> .env
           cd ..
 
       - name: Build Docker Image
