--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,4 +7,4 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5000:5000" 
-    command: ["python", "/app/app.py"]
+    command: ["python", "/tests/start_app.py"]
