pylint avec seuil de score

--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -21,8 +21,17 @@ jobs:
           python -m pip install --upgrade pip
           pip install pylint
 
-      - name: Run Pylint
-        run: |
-          pylint **/*.py
+          - name: Run Pylint with score check
+          run: |
+            output=$(pylint **/*.py | tee pylint-output.txt)
+            score=$(echo "$output" | grep "rated at" | grep -oP '[0-9]+\.[0-9]+(?=/10)')
+            echo "Pylint score: $score"
+            # compare score < 7.0 (bash version)
+            if (( $(echo "$score < 7.0" | bc -l) )); then
+              echo "❌ Pylint score too low (must be >= 7.0)"
+              exit 1
+            else
+              echo "✅ Pylint score is acceptable"
+            fi
 
 
