--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,13 +1,13 @@
-name: Pylint check
+name: Lint Code
 
 on: [push, pull_request]
 
 jobs:
-  lint:
+  pylint:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -17,19 +17,19 @@ jobs:
 
       - name: Install dependencies
         run: |
-          sudo apt-get update
-          sudo apt-get install -y bc
           python -m pip install --upgrade pip
           pip install pylint
 
-      - name: Run Pylint with score check
+      - name: Set PYTHONPATH
+        run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+
+      - name: Run Pylint
         run: |
-          output=$(pylint **/*.py | tee pylint-output.txt)
-          score=$(echo "$output" | grep "rated at" | grep -oP '[0-9]+\.[0-9]+(?=/10)')
+          output=$(pylint **/*.py --score y | tee pylint-output.txt)
+          echo "$output"
+          score=$(echo "$output" | grep "Your code has been rated at" | tail -1 | sed -E 's/.* ([0-9.]+)\/10.*/\1/')
           echo "Pylint score: $score"
           if (( $(echo "$score < 7.0" | bc -l) )); then
             echo "❌ Pylint score too low (must be >= 7.0)"
             exit 1
-          else
-            echo "✅ Pylint score is acceptable"
           fi
