--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -1,13 +1,17 @@
-name: Lint Code
+name: Run Pylint
 
-on: [push, pull_request]
+on:
+  push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
-  pylint:
+  lint:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout repository
         uses: actions/checkout@v3
 
       - name: Set up Python
@@ -15,17 +19,15 @@ jobs:
         with:
           python-version: '3.10'
 
-      - name: Install dependencies
+      - name: Install dependencies from requirements.txt
         run: |
           python -m pip install --upgrade pip
-          pip install pylint
-
-      - name: Set PYTHONPATH
-        run: echo "PYTHONPATH=$(pwd)" >> $GITHUB_ENV
+          pip install -r requirements.txt
+          pip install flask requests bs4 boto3 pymongo python-dotenv unidecode python-dateutil tqdm
 
       - name: Run Pylint
         run: |
-          output=$(pylint **/*.py --score y | tee pylint-output.txt)
+          output=$(pylint **/*.py --disable=C0114,C0116,C0301,C0303,C0411 --score y | tee pylint-output.txt)
           echo "$output"
           score=$(echo "$output" | grep "Your code has been rated at" | tail -1 | sed -E 's/.* ([0-9.]+)\/10.*/\1/')
           echo "Pylint score: $score"
