--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies from requirements.txt
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r app/experiments/requirements.txt
           pip install flask requests bs4 boto3 pymongo python-dotenv unidecode python-dateutil tqdm
 
       - name: Run Pylint
