--- a/.github/workflows/pylint.yml
+++ b/.github/workflows/pylint.yml
@@ -23,7 +23,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r app/requirements.txt
-          pip install flask requests bs4 boto3 pymongo python-dotenv unidecode python-dateutil tqdm
+          pip install flask requests bs4 boto3 pymongo python-dotenv unidecode python-dateutil tqdm pylint
 
       - name: Run Pylint
         run: |
